<resources>
    <string name="app_name">Street Light App</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="meterId">MSN</string>
    <string name="modem_id">Modem ID</string>
    <string name="mdn">MDN</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="editor_insert_street_failed">Error with saving info</string>
    <string name="editor_insert_street_successful">Saved</string>
    <string name="add_street_light_info">Add Info</string>
    <string name="empty_view_title_text">It\'s empty in here</string>
    <string name="empty_view_subtitle_text">Oops! seems like there\'s \n nothing in this folder yet.</string>
    <string name="empty_street_light_data">Empty Database</string>
    <string name="editor_activity_title_add_new_street_info">Add a New Street Info</string>
    <string name="editor_activity_title_edit_street_info">Edit Street Info</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this info</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_info_successful">Deleted !</string>
    <string name="address_not_available">Address not available</string>
    <string name="button_restore">Restore</string>
    <string name="button_load_status">Load Status</string>
    <string name="button_power">Power</string>
    <string name="button_energy">Energy</string>
    <string name="button_switch_on">Connected</string>
    <string name="button_switch_off">Disconnected</string>
    <string name="meter_id">MSN</string>
    <string name="mAddress">Address</string>
    <string name="mModem_id">Modem Id</string>
    <string name="street_light_location">Street Light</string>
    <string name="action_edit">Edit</string>
    <string name="modemid">Modem Id</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="sign_out">Sign Out</string>
</resources>
