<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.developer.sourav.streetlightapp.EditorActivity">

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_mdn"
            app:layout_constraintLeft_toRightOf="@+id/textViewLocation"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:maxLength="25"
            android:inputType="textCapWords"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

        <EditText
            android:id="@+id/edit_meter_id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:maxLength="10"
            android:inputType="text"
            app:layout_constraintLeft_toRightOf="@+id/textViewMeterId"
            android:layout_marginStart="19dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/edit_mdn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_modem_id"
            app:layout_constraintLeft_toRightOf="@+id/textViewMDN"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:maxLength="11"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textViewMeterId"
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="29dp"
            android:gravity="center"
            android:ems="10"
            android:text="@string/meterId"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_modem_id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@+id/textViewModemId"
            android:layout_marginStart="9dp"
            android:maxLength="12"
            android:inputType="text"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_meter_id"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textViewModemId"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/modem_id"
            android:ems="10"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMeterId"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewMDN"
            android:layout_width="66dp"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/mdn"
            android:ems="10"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewModemId"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/location"
            android:ems="10"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMDN"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/address"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:layout_marginTop="22dp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.509" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:layout_marginTop="17dp"
            android:maxLength="40"
            app:layout_constraintTop_toBottomOf="@+id/edit_location"
            app:layout_constraintLeft_toRightOf="@+id/textViewAddress"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
