<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context="com.developer.sourav.streetlightapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/location_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:columnWidth="180dp"
            android:gravity="center"
            android:horizontalSpacing="16dp"
            android:numColumns="2"
            android:padding="16dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="16dp">

        </GridView>

        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/empty_street_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/empty_street_light_data"
                android:src="@drawable/ic_empty_image" />

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_street_image"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="16dp"
                android:text="@string/empty_view_title_text"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/empty_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_title_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_view_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0" />
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_location_fab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:src="@drawable/ic_add"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:elevation="6dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
