<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/remoteCoordinator"
    tools:context=".StreetLightRemote">

    <ScrollView
        android:id="@+id/remote"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="2dp"
                android:text="@string/meter_id"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewMeterId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textViewMeter"
                app:layout_constraintVertical_bias="0.250" />

            <TextView
                android:id="@+id/textViewModem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:padding="2dp"
                android:text="@string/modemid"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintLeft_toRightOf="@+id/view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewmodem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.500"
                app:layout_constraintLeft_toRightOf="@+id/view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewModem"
                app:layout_constraintVertical_bias="0.250" />


            <Button
                android:id="@+id/buttonRestore"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/button_restore"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.854"
                app:layout_constraintLeft_toLeftOf="@+id/imageView3"
                app:layout_constraintRight_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.333" />

            <Button
                android:id="@+id/buttonLoadStatus"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginBottom="29dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/button_load_status"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintHorizontal_bias="0.102"
                app:layout_constraintLeft_toLeftOf="@+id/imageView4"
                app:layout_constraintRight_toRightOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonPower"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/button_power"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintHorizontal_bias="0.948"
                app:layout_constraintLeft_toLeftOf="@+id/imageView4"
                app:layout_constraintRight_toRightOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonEnergy"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@android:color/white"
                android:text="@string/button_energy"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLoadStatus"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintLeft_toLeftOf="@+id/imageView4"
                app:layout_constraintRight_toRightOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/buttonLoadStatus"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/switchButton"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:textOff="@string/button_switch_off"
                android:textOn="@string/button_switch_on"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintLeft_toLeftOf="@+id/imageView3"
                app:layout_constraintRight_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.523" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/holo_green_dark"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:foregroundGravity="center"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:srcCompat="@android:color/transparent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="16dp"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@color/colorPrimary" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</android.support.design.widget.CoordinatorLayout>